--- a/website/newsletter/255/index.mdx
+++ b/website/newsletter/255/index.mdx
@@ -1,14 +1,17 @@
 ---
 slug: /255
-title: "This Week In React #255: ..."
+title: "This Week In React #255: Next.js, RSC, shadcn, TanStack, 3D, Fumadocs | Solito, iOS header items, Expo, BottomTabs, MMKV, ImGui | Node.js, Vitest, Lighthouse"
 authors: [slorber]
 date: 10-22-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+This week we have a lot of interesting content about Next.js, with a new major release dropping just before their flagship conf. But also fair cricitisms showing that not everyone is satisfied with the framework.
+
+On the mobile side, React Native developers will enjoy improved support for iOS 26 and the ability to provide native iOS header items. BottomTabs is now v1, and Solito v5 dropped with a paradigm change.
+
+Let’s also welcome a new co-author of this newsletter: [Armand Petit](https://www.linkedin.com/in/armandpetit/) helped me on the React Native section.
 
 <!-- truncate -->
 
@@ -35,7 +38,9 @@ In this tutorial, you will:
 
 ## ⚛️ React {#react}
 
-[Next.js 16](https://nextjs.org/blog/next-16)
+[![Next.js 16](/emails/issues/255/next.jpg)](https://nextjs.org/blog/next-16)
+
+**[Next.js 16](https://nextjs.org/blog/next-16)**
 
 The new major version of Next.js just dropped as a stable release, just before [Next.js Conf 2025](https://www.youtube.com/watch?v=IdIgkiDu-94), which is currently taking place. We’ll cover the conf announcements next week, in particular the new Cache Components features that is quite an important piece to explore.
 
@@ -59,7 +64,6 @@ Since the beta, they have also introduced new exciting features:
 ---
 
 - 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_3.2)
-
 - 👀 [Async React demo](https://github.com/rickhanlonii/async-react): The code and demo app of Rick Hanlon’s talk at React Conf, showing how to leverage async React features to obtain a great UX no matter the network conditions.
 - 📊 [The Pragmatic Engineer 2025 Survey](https://newsletter.pragmaticengineer.com/p/the-pragmatic-engineer-2025-survey-part-3): Results show React and React Natuve continue to be the most popular by far.
 - 📖 [shadcn/ui Forms documentation](https://ui.shadcn.com/docs/forms): shadcn/ui introduced new guides to build forms with various frameworks. It recently introduced a new `<Field>` component that you should now prefer over the `<Form>` component (not actively developed anymore). See also this [deep dive video on the new Field component](https://www.youtube.com/watch?v=gjrXeqgxbas) by Web Dev Simplified.
@@ -78,7 +82,7 @@ Since the beta, they have also introduced new exciting features:
 - 📦 [TanStack Query 4.42 \- Add React 19 as peerDeps](https://github.com/TanStack/query/releases/tag/v4.42.0): For those still using the older React Query v4, it now officially supports React 19\.
 - 📦 [Triplex \- Visual workspace for building React / Three Fiber 2D/3D components](https://triplex.dev/blog/triplex-moves-to-pmndrs): The tool for creative React developers recently became open source, joining the Poimandres collective.
 - 📦 [UIKit 1.0 \- Build performant 3D user interfaces for Three.js and React Three Fiber](https://github.com/pmndrs/uikit/releases/tag/v1.0.46)
-- 📦 [Reactylon 3.3 \- Create immersive XR experiences with](https://github.com/simonedevit/reactylon/blob/main/CHANGELOG.md) [Babylon.js](http://Babylon.js) [\- Add microgestures](https://github.com/simonedevit/reactylon/blob/main/CHANGELOG.md)
+- 📦 [Reactylon 3.3 \- Create immersive XR experiences with Babylon.js - Add microgestures](https://github.com/simonedevit/reactylon/blob/main/CHANGELOG.md)
 - 📦 [Module Federation 0.21 \- Add React Router v7 Support to Module Federation Bridge](https://github.com/module-federation/core/releases/tag/v0.21.0)
 - 📦 [Fumadocs 16.0 \- MDX plugins, remove deprecated features, React 19.2](https://fumadocs.dev/blog/v16)
 - 🎥 [Shruti Kapoor \- React’s useEffect Isn’t Bad \- Your Code Is. Fix It Now.](https://www.youtube.com/watch?v=yGOPO2V6MHI)
@@ -106,7 +110,9 @@ If you’re not looking for an invoice, start with LyteNyte Grid Core today.
 
 ## 📱 React-Native {#react-native}
 
-[Solito v5 – Bridging React Native and Next.js made simpler](https://solito.dev/v5)
+[![Solito 5](/emails/issues/255/solito.jpg)](https://solito.dev/v5)
+
+**[Solito 5 – Bridging React Native and Next.js](https://solito.dev/v5)**
 
 Solito, the library that connects React Native and Next.js navigation, has reached its fifth version and further simplifies life for cross-platform developers.
 
@@ -159,6 +165,6 @@ This new version also includes:
 
 [![alt](/emails/issues/255/meme.jpg)](https://x.com/sebastienlorber/status/1980566462474408089)
 
-[![alt](/emails/issues/255/meme.jpg)](https://bsky.app/profile/matteogabriele.bsky.social/post/3m2m2sfi5bs2n)
+[![alt](/emails/issues/255/meme2.jpg)](https://bsky.app/profile/matteogabriele.bsky.social/post/3m2m2sfi5bs2n)
 
 See ya! 👋
