--- a/website/newsletter/256/index.mdx
+++ b/website/newsletter/256/index.mdx
@@ -12,8 +12,6 @@ Hi everyone!
 
 <!-- truncate -->
 
-TODO pour seb: s'assurer qu'on a bien le nouveau lien Callstack!
-
 import Support from "../_support.mdx";
 
 <Support />
@@ -30,9 +28,9 @@ Stop wasting time fighting your i18n keys. 😫 Crowdin is the perfect, automate
 
 The days of manually providing context are over:
 
-*   **Context Harvester:** Our open-source CLI uses Agentic AI to **scan your code** and automatically attach usage context to every string. It knows if "Close" is a button, a component name, or a modal title. No more guesswork for the AI. 🤯
-*   **Smarter AI Translations:** With that precise context, our pre-translation engine delivers production-ready strings instantly.
-*   **Integrations:** Connect Crowdin directly to your repo. Localization becomes a simple, continuous part of your CI/CD pipeline.
+- **Context Harvester:** Our open-source CLI uses Agentic AI to **scan your code** and automatically attach usage context to every string. It knows if "Close" is a button, a component name, or a modal title. No more guesswork for the AI. 🤯
+- **Smarter AI Translations:** With that precise context, our pre-translation engine delivers production-ready strings instantly.
+- **Integrations:** Connect Crowdin directly to your repo. Localization becomes a simple, continuous part of your CI/CD pipeline.
 
 Launch a multilingual app without breaking a sweat. Focus on features, not fighting files🚀
 
@@ -59,11 +57,11 @@ Stop shipping preventable bugs. Sentry AI Code Review brings error and performan
 
 [**Why devs rely on it**](https://www.youtube.com/watch?v=1NzuerrWMfk):
 
-*   Automated detection of bugs, risks, and regressions
-*   Actionable insights, not distracting noise
-*   Tighter feedback loops for faster merges
-*   Context-aware checks tied to real Sentry data
-*   Less time debugging, more time building
+- Automated detection of bugs, risks, and regressions
+- Actionable insights, not distracting noise
+- Tighter feedback loops for faster merges
+- Context-aware checks tied to real Sentry data
+- Less time debugging, more time building
 
 Ship code that breaks less, review with confidence, and keep production stable. [**Try AI Code Review in Sentry**](https://sentry.io/product/ai-code-review/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=aicodereview-fy26q3-aicodereviewlaunch&utm_content=newsletter-ai-code-review-beta-learnmore).
 
@@ -73,7 +71,7 @@ Ship code that breaks less, review with confidence, and keep production stable. 
 
 <Todo />
 
-- 💸 [React Universe Conf – T. Occhino, Ch. Nakazawa, Ch. Cheever, N. Corti & M. Grabowski on the “10 Years of React Native and Beyond” panel](https://www.reactuniverseconf.com?utm_campaign=10_years_panel&utm_source=TWIR&utm_medium=mail&utm_content=post_22_08_2025#panel)
+- 💸 [Set up, build and run Expo apps on Meta Quest — a hands-on guide for React Native developers](https://www.callstack.com/blog/getting-started-with-expo-on-meta-quest?utm_campaign=meta&utm_source=TWIR&utm_medium=mail&utm_content=link)
 
 ---
 
